ListMoveRowsTest: use ContainerInfo and FieldInfo